--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         class="buscador" 
         placeholder="Buscar películas..." 
       >
+      <div id="sugerencias" class="sugerencias"></div>
     </div>
   </header>
 
@@ -52,9 +53,14 @@
         <p class="modal-año"><strong>Año:</strong> <span id="modalAño"></span></p>
         <p class="modal-genero"><strong>Género:</strong> <span id="modalGenero"></span></p>
         <p class="modal-puntuacion"><strong>Calificación:</strong> <span id="modalPuntuacion"></span></p>
+        <button class="btn-trailer" id="btnTrailer">▶️ Ver Trailer</button>
       </div>
     </div>
     <div class="modal-body">
+      <div id="trailerContainer" class="trailer-container" style="display: none;">
+        <h3>Trailer</h3>
+        <iframe id="trailerIframe" width="100%" height="400" frameborder="0" allowfullscreen></iframe>
+      </div>
       <h3>Sinopsis</h3>
       <p id="modalSinopsis"></p>
     </div>
